getting started in section-Two

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
            <img src="./images/icon-up.svg" alt="status__image">  1099 Today
           </p>
         </div>
-        <div class="col col--youTube ">
+        <div class="col col--youube ">
           <p class="col__title">
             <img src="./images/icon-youtube.svg" alt="facebook-icon">   Nathan F.
           </p>
@@ -80,8 +80,8 @@
           </p>
         </div>
       </main>
-      <main class="section-two">
-        <header class="sectionTwo__header">
+      <main class="section-Two">
+        <header class="section-Two__header">
           <h2>
             Overview - Today
           </h2>
