final update on the UI

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     />
     <link rel="stylesheet" href="./Assets/vendor/normalize.css" />
     <link rel="stylesheet" href="./Assets/css/Style.css" />
+    <script src="./Assets/js/app.js" defer></script>
     <title>Frontend Mentor | [Dashboard Social Media]</title>
   </head>
   <body>
@@ -31,7 +32,7 @@
         </div>
         <div class="header__toggler">
          <label for="switch">Dark Mode</label>
-         <input type="checkbox">
+         <input type="checkbox" id="switch">
         </div>
       </header>
       <main class="section-one">
@@ -68,7 +69,7 @@
            <img src="./images/icon-up.svg" alt="status__image">  1099 Today
           </p>
         </div>
-        <div class="col col--youube ">
+        <div class="col col--youTube ">
           <p class="col__title">
             <img src="./images/icon-youtube.svg" alt="facebook-icon">   Nathan F.
           </p>
@@ -93,7 +94,7 @@
                 Page Views
               </div>
               <div class="partOne__icon">
-                ICON IS HERE
+               <img src="./images/icon-facebook.svg" alt="facebook-icon">
               </div>
             </div>
             <div class="partTwo">
@@ -101,7 +102,7 @@
                 87
               </div>
               <div class="partTwo__percentage">
-                3%
+                <img src="./images/icon-up.svg" alt="status__image"> 3%
               </div>
             </div>
           </div>
@@ -111,15 +112,15 @@
                 Likes
               </div>
               <div class="partOne__icon">
-                ICON IS HERE
+                <img src="./images/icon-facebook.svg" alt="facebook-icon">
               </div>
             </div>
             <div class="partTwo">
               <div class="partTwo__statistics">
                 52
               </div>
-              <div class="partTwo__percentage">
-                2%
+              <div class="partTwo__percentage partTwo__percentage--down">
+                <img src="./images/icon-down.svg" alt="status__image"> 2%
               </div>
             </div>
           </div>
@@ -129,7 +130,7 @@
                 Likes
               </div>
               <div class="partOne__icon">
-                ICON IS HERE
+                <img src="./images/icon-instagram.svg" alt="facebook-icon">
               </div>
             </div>
             <div class="partTwo">
@@ -137,7 +138,7 @@
                 5462
               </div>
               <div class="partTwo__percentage">
-                2257%
+                <img src="./images/icon-up.svg" alt="status__image"> 2257%
               </div>
             </div>
           </div>
@@ -147,7 +148,7 @@
                 Profile Views
               </div>
               <div class="partOne__icon">
-                ICON IS HERE
+                <img src="./images/icon-instagram.svg" alt="facebook-icon">
               </div>
             </div>
             <div class="partTwo">
@@ -155,7 +156,7 @@
                 52k
               </div>
               <div class="partTwo__percentage">
-                1375%
+                <img src="./images/icon-up.svg" alt="status__image"> 1375%
               </div>
             </div>
           </div>
@@ -165,7 +166,7 @@
                 Retweets
               </div>
               <div class="partOne__icon">
-                ICON IS HERE
+                <img src="./images/icon-twitter.svg" alt="facebook-icon">
               </div>
             </div>
             <div class="partTwo">
@@ -173,7 +174,7 @@
                 117
               </div>
               <div class="partTwo__percentage">
-                303%
+                <img src="./images/icon-up.svg" alt="status__image"> 303%
               </div>
             </div>
           </div>
@@ -183,7 +184,7 @@
                 Likes
               </div>
               <div class="partOne__icon">
-                ICON IS HERE
+                <img src="./images/icon-twitter.svg" alt="facebook-icon">
               </div>
             </div>
             <div class="partTwo">
@@ -191,7 +192,7 @@
                 507
               </div>
               <div class="partTwo__percentage">
-                553%
+                <img src="./images/icon-up.svg" alt="status__image"> 553%
               </div>
             </div>
           </div>
@@ -201,15 +202,15 @@
                 Likes
               </div>
               <div class="partOne__icon">
-                ICON IS HERE
+                <img src="./images/icon-youtube.svg" alt="facebook-icon">
               </div>
             </div>
             <div class="partTwo">
               <div class="partTwo__statistics">
                 107
               </div>
-              <div class="partTwo__percentage">
-                19%
+              <div class="partTwo__percentage partTwo__percentage--down">
+                <img src="./images/icon-down.svg" alt="status__image">  19%
               </div>
             </div>
           </div>
@@ -219,15 +220,15 @@
                 Total Views
               </div>
               <div class="partOne__icon">
-                ICON IS HERE
+                <img src="./images/icon-youtube.svg" alt="facebook-icon">
               </div>
             </div>
             <div class="partTwo">
               <div class="partTwo__statistics">
                 1407
               </div>
-              <div class="partTwo__percentage">
-                12%
+              <div class="partTwo__percentage partTwo__percentage--down">
+                <img src="./images/icon-down.svg" alt="status__image">  12%
               </div>
             </div>
           </div>
