adding functionality to the darkmode toggler to change the name

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           </p>
         </div>
         <div class="header__toggler">
-         <label for="switch">Dark Mode</label>
+         <label id="darkLabel" for="switch">Dark Mode</label>
          <input type="checkbox" id="switch">
         </div>
       </header>
