fixing some toggler bugs

--- a/index.html
+++ b/index.html
@@ -31,53 +31,49 @@
           </p>
         </div>
         <div class="header__toggler">
-         <label id="darkLabel" for="switch">Dark Mode</label>
-         <input type="checkbox" id="switch">
+          <label id="darkLabel" for="">Light Mode</label>
+          <input type="checkbox" id="switch" />
         </div>
       </header>
       <main class="section-one">
         <div class="col col--facebook">
           <p class="col__title">
-         <img src="./images/icon-facebook.svg" alt="facebook-icon">   @nathanf
+            <img src="./images/icon-facebook.svg" alt="facebook-icon" />
+            @doomatoes.2017
           </p>
-          <h2 class="col__number">
-            1987 <span>Followers</span> 
-          </h2>
+          <h2 class="col__number">1987 <span>Followers</span></h2>
           <p class="col__follow">
-           <img src="./images/icon-up.svg" alt="status__image">  12 Today
+            <img src="./images/icon-up.svg" alt="status__image" /> 12 Today
           </p>
         </div>
-        <div class="col  col--twitter">
+        <div class="col col--twitter">
           <p class="col__title">
-            <img src="./images/icon-twitter.svg" alt="facebook-icon">   @nathanf
+            <img src="./images/icon-twitter.svg" alt="twitter-icon" />
+            @Ali_GamalAli
           </p>
-          <h2 class="col__number">
-            1044 <span>Followers</span> 
-          </h2>
+          <h2 class="col__number">1044 <span>Followers</span></h2>
           <p class="col__follow">
-           <img src="./images/icon-up.svg" alt="status__image">  99 Today
+            <img src="./images/icon-up.svg" alt="status__image" /> 99 Today
           </p>
         </div>
         <div class="col col--instagram">
           <p class="col__title">
-            <img src="./images/icon-instagram.svg" alt="facebook-icon">   @realnathanf
+            <img src="./images/icon-instagram.svg" alt="instagram-icon" />
+            @dev.ed.egy
           </p>
-          <h2 class="col__number">
-            11k <span>Followers</span> 
-          </h2>
+          <h2 class="col__number">11k <span>Followers</span></h2>
           <p class="col__follow">
-           <img src="./images/icon-up.svg" alt="status__image">  1099 Today
+            <img src="./images/icon-up.svg" alt="status__image" /> 1099 Today
           </p>
         </div>
-        <div class="col col--youTube ">
+        <div class="col col--youTube">
           <p class="col__title">
-            <img src="./images/icon-youtube.svg" alt="facebook-icon">   Nathan F.
+            <img src="./images/icon-youtube.svg" alt="youTube-icon" /> fasingan
+            NoJutsu
           </p>
-          <h2 class="col__number">
-            8239  <span>Subscribers</span>
-          </h2>
+          <h2 class="col__number">8239 <span>Subscribers</span></h2>
           <p class="col__follow col__follow--down">
-           <img src="./images/icon-down.svg" alt="status__image">  144 Today
+            <img src="./images/icon-down.svg" alt="status__image" /> 144 Today
           </p>
         </div>
       </main>
@@ -94,7 +90,7 @@
                 Page Views
               </div>
               <div class="partOne__icon">
-               <img src="./images/icon-facebook.svg" alt="facebook-icon">
+                <img src="./images/icon-facebook.svg" alt="facebook-icon" />
               </div>
             </div>
             <div class="partTwo">
@@ -102,7 +98,7 @@
                 87
               </div>
               <div class="partTwo__percentage">
-                <img src="./images/icon-up.svg" alt="status__image"> 3%
+                <img src="./images/icon-up.svg" alt="status__image" /> 3%
               </div>
             </div>
           </div>
@@ -112,7 +108,7 @@
                 Likes
               </div>
               <div class="partOne__icon">
-                <img src="./images/icon-facebook.svg" alt="facebook-icon">
+                <img src="./images/icon-facebook.svg" alt="facebook-icon" />
               </div>
             </div>
             <div class="partTwo">
@@ -120,7 +116,7 @@
                 52
               </div>
               <div class="partTwo__percentage partTwo__percentage--down">
-                <img src="./images/icon-down.svg" alt="status__image"> 2%
+                <img src="./images/icon-down.svg" alt="status__image" /> 2%
               </div>
             </div>
           </div>
@@ -130,7 +126,7 @@
                 Likes
               </div>
               <div class="partOne__icon">
-                <img src="./images/icon-instagram.svg" alt="facebook-icon">
+                <img src="./images/icon-instagram.svg" alt="facebook-icon" />
               </div>
             </div>
             <div class="partTwo">
@@ -138,7 +134,7 @@
                 5462
               </div>
               <div class="partTwo__percentage">
-                <img src="./images/icon-up.svg" alt="status__image"> 2257%
+                <img src="./images/icon-up.svg" alt="status__image" /> 2257%
               </div>
             </div>
           </div>
@@ -148,7 +144,7 @@
                 Profile Views
               </div>
               <div class="partOne__icon">
-                <img src="./images/icon-instagram.svg" alt="facebook-icon">
+                <img src="./images/icon-instagram.svg" alt="facebook-icon" />
               </div>
             </div>
             <div class="partTwo">
@@ -156,7 +152,7 @@
                 52k
               </div>
               <div class="partTwo__percentage">
-                <img src="./images/icon-up.svg" alt="status__image"> 1375%
+                <img src="./images/icon-up.svg" alt="status__image" /> 1375%
               </div>
             </div>
           </div>
@@ -166,7 +162,7 @@
                 Retweets
               </div>
               <div class="partOne__icon">
-                <img src="./images/icon-twitter.svg" alt="facebook-icon">
+                <img src="./images/icon-twitter.svg" alt="facebook-icon" />
               </div>
             </div>
             <div class="partTwo">
@@ -174,7 +170,7 @@
                 117
               </div>
               <div class="partTwo__percentage">
-                <img src="./images/icon-up.svg" alt="status__image"> 303%
+                <img src="./images/icon-up.svg" alt="status__image" /> 303%
               </div>
             </div>
           </div>
@@ -184,7 +180,7 @@
                 Likes
               </div>
               <div class="partOne__icon">
-                <img src="./images/icon-twitter.svg" alt="facebook-icon">
+                <img src="./images/icon-twitter.svg" alt="facebook-icon" />
               </div>
             </div>
             <div class="partTwo">
@@ -192,7 +188,7 @@
                 507
               </div>
               <div class="partTwo__percentage">
-                <img src="./images/icon-up.svg" alt="status__image"> 553%
+                <img src="./images/icon-up.svg" alt="status__image" /> 553%
               </div>
             </div>
           </div>
@@ -202,7 +198,7 @@
                 Likes
               </div>
               <div class="partOne__icon">
-                <img src="./images/icon-youtube.svg" alt="facebook-icon">
+                <img src="./images/icon-youtube.svg" alt="facebook-icon" />
               </div>
             </div>
             <div class="partTwo">
@@ -210,7 +206,7 @@
                 107
               </div>
               <div class="partTwo__percentage partTwo__percentage--down">
-                <img src="./images/icon-down.svg" alt="status__image">  19%
+                <img src="./images/icon-down.svg" alt="status__image" /> 19%
               </div>
             </div>
           </div>
@@ -220,7 +216,7 @@
                 Total Views
               </div>
               <div class="partOne__icon">
-                <img src="./images/icon-youtube.svg" alt="facebook-icon">
+                <img src="./images/icon-youtube.svg" alt="facebook-icon" />
               </div>
             </div>
             <div class="partTwo">
@@ -228,7 +224,7 @@
                 1407
               </div>
               <div class="partTwo__percentage partTwo__percentage--down">
-                <img src="./images/icon-down.svg" alt="status__image">  12%
+                <img src="./images/icon-down.svg" alt="status__image" /> 12%
               </div>
             </div>
           </div>
