fixing arial-label problem

--- a/index.html
+++ b/index.html
@@ -23,16 +23,14 @@
     <div class="container">
       <header class="header">
         <div class="header__title">
-          <h1>
-            Social Media Dashboard
-          </h1>
-          <p>
-            Total Followers: 23,004
-          </p>
+          <h1>Social Media Dashboard</h1>
+          <p>Total Followers: 23,004</p>
         </div>
         <div class="header__toggler">
-          <label id="darkLabel" for="">Light Mode</label>
-          <input type="checkbox" id="switch" />
+          <label id="darkLabel" for="switch" aria-label="checkbox"
+            >Light Mode</label
+          >
+          <input type="checkbox" id="switch" name="checkbox" />
         </div>
       </header>
       <main class="section-one">
@@ -79,24 +77,18 @@
       </main>
       <main class="section-Two">
         <header class="section-Two__header">
-          <h2>
-            Overview - Today
-          </h2>
+          <h2>Overview - Today</h2>
         </header>
         <section class="statistics">
           <div class="col">
             <div class="partOne">
-              <div class="partOne__title">
-                Page Views
-              </div>
+              <div class="partOne__title">Page Views</div>
               <div class="partOne__icon">
                 <img src="./images/icon-facebook.svg" alt="facebook-icon" />
               </div>
             </div>
             <div class="partTwo">
-              <div class="partTwo__statistics">
-                87
-              </div>
+              <div class="partTwo__statistics">87</div>
               <div class="partTwo__percentage">
                 <img src="./images/icon-up.svg" alt="status__image" /> 3%
               </div>
@@ -104,17 +96,13 @@
           </div>
           <div class="col">
             <div class="partOne">
-              <div class="partOne__title">
-                Likes
-              </div>
+              <div class="partOne__title">Likes</div>
               <div class="partOne__icon">
                 <img src="./images/icon-facebook.svg" alt="facebook-icon" />
               </div>
             </div>
             <div class="partTwo">
-              <div class="partTwo__statistics">
-                52
-              </div>
+              <div class="partTwo__statistics">52</div>
               <div class="partTwo__percentage partTwo__percentage--down">
                 <img src="./images/icon-down.svg" alt="status__image" /> 2%
               </div>
@@ -122,17 +110,13 @@
           </div>
           <div class="col">
             <div class="partOne">
-              <div class="partOne__title">
-                Likes
-              </div>
+              <div class="partOne__title">Likes</div>
               <div class="partOne__icon">
                 <img src="./images/icon-instagram.svg" alt="facebook-icon" />
               </div>
             </div>
             <div class="partTwo">
-              <div class="partTwo__statistics">
-                5462
-              </div>
+              <div class="partTwo__statistics">5462</div>
               <div class="partTwo__percentage">
                 <img src="./images/icon-up.svg" alt="status__image" /> 2257%
               </div>
@@ -140,17 +124,13 @@
           </div>
           <div class="col">
             <div class="partOne">
-              <div class="partOne__title">
-                Profile Views
-              </div>
+              <div class="partOne__title">Profile Views</div>
               <div class="partOne__icon">
                 <img src="./images/icon-instagram.svg" alt="facebook-icon" />
               </div>
             </div>
             <div class="partTwo">
-              <div class="partTwo__statistics">
-                52k
-              </div>
+              <div class="partTwo__statistics">52k</div>
               <div class="partTwo__percentage">
                 <img src="./images/icon-up.svg" alt="status__image" /> 1375%
               </div>
@@ -158,17 +138,13 @@
           </div>
           <div class="col">
             <div class="partOne">
-              <div class="partOne__title">
-                Retweets
-              </div>
+              <div class="partOne__title">Retweets</div>
               <div class="partOne__icon">
                 <img src="./images/icon-twitter.svg" alt="facebook-icon" />
               </div>
             </div>
             <div class="partTwo">
-              <div class="partTwo__statistics">
-                117
-              </div>
+              <div class="partTwo__statistics">117</div>
               <div class="partTwo__percentage">
                 <img src="./images/icon-up.svg" alt="status__image" /> 303%
               </div>
@@ -176,17 +152,13 @@
           </div>
           <div class="col">
             <div class="partOne">
-              <div class="partOne__title">
-                Likes
-              </div>
+              <div class="partOne__title">Likes</div>
               <div class="partOne__icon">
                 <img src="./images/icon-twitter.svg" alt="facebook-icon" />
               </div>
             </div>
             <div class="partTwo">
-              <div class="partTwo__statistics">
-                507
-              </div>
+              <div class="partTwo__statistics">507</div>
               <div class="partTwo__percentage">
                 <img src="./images/icon-up.svg" alt="status__image" /> 553%
               </div>
@@ -194,17 +166,13 @@
           </div>
           <div class="col">
             <div class="partOne">
-              <div class="partOne__title">
-                Likes
-              </div>
+              <div class="partOne__title">Likes</div>
               <div class="partOne__icon">
                 <img src="./images/icon-youtube.svg" alt="facebook-icon" />
               </div>
             </div>
             <div class="partTwo">
-              <div class="partTwo__statistics">
-                107
-              </div>
+              <div class="partTwo__statistics">107</div>
               <div class="partTwo__percentage partTwo__percentage--down">
                 <img src="./images/icon-down.svg" alt="status__image" /> 19%
               </div>
@@ -212,17 +180,13 @@
           </div>
           <div class="col">
             <div class="partOne">
-              <div class="partOne__title">
-                Total Views
-              </div>
+              <div class="partOne__title">Total Views</div>
               <div class="partOne__icon">
                 <img src="./images/icon-youtube.svg" alt="facebook-icon" />
               </div>
             </div>
             <div class="partTwo">
-              <div class="partTwo__statistics">
-                1407
-              </div>
+              <div class="partTwo__statistics">1407</div>
               <div class="partTwo__percentage partTwo__percentage--down">
                 <img src="./images/icon-down.svg" alt="status__image" /> 12%
               </div>
