fixing multi-main

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <input type="checkbox" id="switch" name="checkbox" />
         </div>
       </header>
-      <main class="section-one">
+      <section class="section-one">
         <div class="col col--facebook">
           <p class="col__title">
             <img src="./images/icon-facebook.svg" alt="facebook-icon" />
@@ -74,7 +74,7 @@
             <img src="./images/icon-down.svg" alt="status__image" /> 144 Today
           </p>
         </div>
-      </main>
+      </section>
       <main class="section-Two">
         <header class="section-Two__header">
           <h2>Overview - Today</h2>
