adding h6 to sections

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <section class="statistics">
           <div class="col">
             <div class="partOne">
-              <div class="partOne__title">Page Views</div>
+              <h6 class="partOne__title">Page Views</h6>
               <div class="partOne__icon">
                 <img src="./images/icon-facebook.svg" alt="facebook-icon" />
               </div>
@@ -96,7 +96,7 @@
           </div>
           <div class="col">
             <div class="partOne">
-              <div class="partOne__title">Likes</div>
+              <h6 class="partOne__title">Likes</h6>
               <div class="partOne__icon">
                 <img src="./images/icon-facebook.svg" alt="facebook-icon" />
               </div>
@@ -110,7 +110,7 @@
           </div>
           <div class="col">
             <div class="partOne">
-              <div class="partOne__title">Likes</div>
+              <h6 class="partOne__title">Likes</h6>
               <div class="partOne__icon">
                 <img src="./images/icon-instagram.svg" alt="facebook-icon" />
               </div>
@@ -124,7 +124,7 @@
           </div>
           <div class="col">
             <div class="partOne">
-              <div class="partOne__title">Profile Views</div>
+              <h6 class="partOne__title">Profile Views</h6>
               <div class="partOne__icon">
                 <img src="./images/icon-instagram.svg" alt="facebook-icon" />
               </div>
